# SpaceTrack

./: .gitignore  frontend_structure_template.md  spacetrack.md
IAC/bucket/AWS-spacestrack/: datalake_lifecycle_policy.json
app/: .env
app/app/: __init__.py  config.py
app/app/models/: db.py
app/app/routes/: objects.py  snapshots.py
app/app/services/: object_service.py  snapshot_service.py
app/app/utils/: helpers.py
backend/: pyproject.toml
backend/app/: __init__.py
backend/app/models/: __init__.py  backfill.py  db.py  orbital_snapshots.py  pipeline_run_logs.py  tracked_objects.py
backend/app/routes/: backfill.py  objects.py  snapshots.py
frontend/: app.ts  package-lock.json  package.json  tsconfig.json
frontend/public/css/: style.css
frontend/public/js/: objects.js  report.js
frontend/routes/: api.ts  index.ts  pages.ts
frontend/services/: apiService.ts
frontend/src/client/: data.ts  globe.ts  main.ts  map.ts  objectsPage.ts  pullShared.ts  reportPage.ts  types.ts
frontend/views/: data.ejs  index.ejs  objects.ejs
frontend/views/partials/: header.ejs  sidebar.ejs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: data.ts  globe.ts  main.ts  style.css  types.ts
