[tool.poetry]
name = "spacetrack-api"
version = "0.1.0"
description = "SpaceTrack Flask API backend"
authors = ["HungElsh"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
spacetrack="^0.15.0"
sgp4 = "^2.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
